backend-maven/Production/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: production-[appname]
  name: production-[service name]
  namespace: [project name]
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: production-[deploymentConfig name]
  type: ClusterIP
